tests/baselines/reference/internalAliasClass.errors.txt
internalAliasClass.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasClass.ts(6,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasClass.ts (2 errors) ====
    module a {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class c {
        }
    }
    
    module c {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import b = a.c;
        export var x: b = new b();
    }